--- a/eboby/hanlp.properties
+++ b/eboby/hanlp.properties
@@ -1,5 +1,5 @@
 #Windows用户请注意，路径分隔符统一使用/
-root=/mnt/eboby/
+root=/home
 #核心词典路径
 CoreDictionaryPath=data/dictionary/CoreNatureDictionary.txt
 #2元语法词典路径
